--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "AtServer/Result",
+    "name": "at_server/result",
     "description": "Result",
     "license": "MIT",
     "type": "library",
